--- a/templates/profissional/editar.html
+++ b/templates/profissional/editar.html
@@ -24,7 +24,7 @@
         </div>
         <nav class="hidden md:flex space-x-6">
             <a href="/servicosProfissional" class="text-gray-600 hover:text-blue-600">Serviços</a>
-            <a href="/agendamentos" class="text-gray-600 hover:text-blue-600">Agedamentos</a>
+            <a href="/agendamentos" class="text-gray-600 hover:text-blue-600">Agendamentos</a>
             <a href="/sobre" class="text-gray-600 hover:text-blue-600">Sobre Nós</a>
             <a href="/contato" class="text-gray-600 hover:text-blue-600">Contato</a>
         </nav>
@@ -83,7 +83,6 @@
         </nav>
     </div>
 </header>
-
 {% with messages = get_flashed_messages() %}
     {% if messages %}
         <div class="flash-messages" style="position: fixed; top: 20px; right: 20px; z-index: 1000;">
