--- a/templates/cliente/cliente.html
+++ b/templates/cliente/cliente.html
@@ -59,7 +59,7 @@
                                 <span>Meu Perfil</span>
                             </a>
 
-                            <a href="/agendamentos"
+                            <a href="/agendamentosCliente"
                                class="dropdown-item flex items-center px-4 py-3 text-gray-700 hover:bg-blue-50 hover:text-blue-600 transition-colors duration-150 group">
                                 <span class="w-5 mr-3">📅</span>
                                 <span>Meus Agendamentos</span>
